py23dif.txt
Key differences between Python 2 and Python 3:


Division Operation:

print 7 / 5
print -7 / 5


Output in Python 2.x :
1 
-2 
Output in Python 3.x : 
1.4 
-1.4

--------------------------------------------------------
Print Function:


print 'Hello, Geeks'      # Python 3.x doesn't support 
print('Hope You like these facts')


Output in Python 2.x : 
Hello, Geeks 
Hope You like these facts 
  
Output in Python 3.x : 
File "a.py", line 1 
    print 'Hello, Geeks' 
                       ^ 
SyntaxError: invalid syntax

--------------------------------------------------------
Unicode:

print(type('default string ')) 
print(type(b'string with b ')) 
print(type(u'string with b '))


Output in Python 2.x (Bytes is same as str) 
<type 'str'> 
<type 'str'>
<type 'unicode'> 

Output in Python 3.x (Bytes and str are different) 
<class 'str'> 
<class 'bytes'>
<class 'str'>

-------------------------------------------------------
Xrange:

for x in xrange(1, 5): 
    print(x) 
  
for x in range(1, 5): 
    print(x)  


Output in Python 2.x 
1 2 3 4 1 2 3 4 
  
Output in Python 3.x 
NameError: name 'xrange' is not defined

------------------------------------------------------
  


 


